--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,14 @@ body,
     height: 100%;
 }
 
-body {
-    background-image: url(../img/bg.jpg);
-    height: 100%;
+.bg-img {
+    min-height: 100%;
+    min-width: 1024px;
     width: 100%;
-    background-position: center center;
-    background-color: #fff;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #fff
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .navbar-default {
@@ -127,14 +126,74 @@ p {
     padding-right: 0px!important
 }
 
+#phone-video-slide {
+    background: #000;
+    height: 100%;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.slide1 {
+    background-image: url(../img/slide1.jpg);
+}
+
+.slide2 {
+    background-image: url(../img/slide2.jpg);
+}
+
+.slide3 {
+    background-image: url(../img/slide3.jpg);
+}
+
+.slide4 {
+    background-image: url(../img/slide4.jpg);
+}
+
+.slide5 {
+    background-image: url(../img/slide5.jpg);
+}
+
+.slide6 {
+    background-image: url(../img/slide6.jpg);
+}
+
+.slide7 {
+    background-image: url(../img/slide7.jpg);
+}
+
+.slick-list,
+.slick-track {
+    height: 100%;
+}
+
 @media (min-width: 991px) {
     .col-form {
         position: relative;
         top: -470px;
     }
+    #phone-video {
+        display: block;
+    }
+    #phone-video-slide {
+        display: none;
+    }
 }
 
 @media (max-width: 991px) {
+    #phone-video {
+        display: none;
+    }
+    #phone-video-slide {
+        display: block;
+        margin: 0;
+        padding: 0;
+    }
     .navbar-default {
         display: none;
     }
@@ -185,5 +244,12 @@ p {
         width: 225px;
         height: 457px;
         padding: 60px 25px 65px 25px;
+    }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px)and (-webkit-min-device-pixel-ratio: 2) {
+    .bg-img {
+        left: 50%;
+        margin-left: -512px;
     }
 }
