--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body,
 }
 
 .bg-img {
+	background-image:url(../img/bg.jpg);
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
     min-height: 100%;
     min-width: 1024px;
     width: 100%;
